# conductor

./: .gitignore  .nalej-component.json  .version  BUILD.bazel  Gopkg.toml  Jenkinsfile  LICENSE  Makefile  README.md  WORKSPACE
.github/: CODEOWNERS
asm/: BUILD.bazel  asm.go  asm_mockup.go  asm_rest.go  entities.go
ci/: azure-pipelines.deploy.yaml  azure-pipelines.main.yaml
ci/templates/: delete_resources.appcluster.yaml  download_artifact.yaml  verify_deploy.appcluster.yaml  verify_deploy.mngtcluster.yaml
client/: BUILD.bazel  conductor.go  conductor_mockup.go  conductor_rest.go  conductor_rest_test.go  conductor_testsuite.go
cmd/conductor/: BUILD.bazel  conductor.go  main.go
cmd/conductor-cli/: BUILD.bazel  app.go  command.go  main.go
cmd/conductor-cli/cmd/: root.go  undeploy.go
cmd/conductor-integration/: BUILD.bazel  main.go
cmd/conductor/cmd/: demo.go  example.go  musician.go  root.go  run.go
cmd/musician/: BUILD.bazel  main.go
cmd/musician/cmd/: root.go  run.go
components/conductor/: BUILD  Dockerfile  component.yaml
components/conductor/mngtcluster/: conductor.deployment.yaml  conductor.persistentvolumeclaim.yaml  conductor.service.yaml
components/monitoring/: component.yaml
components/monitoring/appcluster/: kube-state-metrics.clusterrole.yaml  kube-state-metrics.clusterrolebinding.yaml  kube-state-metrics.deployment.yaml  kube-state-metrics.rolebinding.yaml  kube-state-metrics.serviceaccount.yaml  musician.deployment.yaml  node-exported.rolebinding.yaml  node-exporter.clusterrole.yaml  node-exporter.clusterrolebinding.yaml  node-exporter.daemonset.yaml  node-exporter.podsecuritypolicy.yaml  node-exporter.serviceaccount.yaml  prometheus.clusterrole.yaml  prometheus.clusterrolebinding.yaml  prometheus.configmap.yaml  prometheus.deployment.yaml  prometheus.service.yaml  prometheus.service2.yaml  prometheus.serviceaccount.yaml
components/musician/: Dockerfile  component.yaml
components/musician/appcluster/: musician.deployment.yaml  musician.service.yaml
config/: musician.yaml
entities/: BUILD.bazel  entities.go  log.go  request.go  request_test.go  time.go
errors/: BUILD.bazel  messages.go
integration/: BUILD.bazel  config.go  integration.go  integration_helper.go
internal/conductor/deployment/: handler.go  handler_suite_test.go  handler_test.go
internal/entities/: application.go  deployment.go  entities.go  messages.go  requirements.go  status.go
internal/musician/: handler.go
internal/persistence/: app_cluster.go
internal/persistence/app_cluster/: app_cluster.go  app_cluster_suite_test.go  app_cluster_test.go
internal/structures/: deployment_matrix.go  pending_plans.go  requests_queue.go
logger/: BUILD.bazel  client.go  parser.go  parser_test.go
orchestrator/: BUILD.bazel  orchestrator.go  orchestrator_basic.go  orchestrator_basic_test.go
pkg/conductor/: common.go  conductor.go  network_operator.go  server.go
pkg/conductor/baton/: handler.go  handler_suite_test.go  handler_test.go  infrastructure_trigger.go  infrastructure_trigger.go.old  manager.go
pkg/conductor/handler/: handler.go  handler_suite_test.go  handler_test.go  manager.go  queue.go
pkg/conductor/monitor/: handler.go  manager.go  pending_plans.go
pkg/conductor/network/: handler.go  istio_network.go  manager.go  zt_network.go
pkg/conductor/observer/: cluster_update_observer.go  deployment_fragment_observer.go
pkg/conductor/plandesigner/: dependency_graph.go  dependency_graph_suite_test.go  dependency_graph_test.go  plan_designer.go  simple_plan_designer.go  simple_plan_designer_suite_test.go  simple_plan_designer_test.go  simple_replica_plan_designer.go  simple_replica_plan_designer_suite_test.go  simple_replica_plan_designer_test.go
pkg/conductor/queue/: application_ops.go  infrastructure_events.go  infrastructure_ops.go
pkg/conductor/requirementscollector/: requirements_collector.go  simple_requirements_collector.go
pkg/conductor/scorer/: scorer.go  scorer_suite_test.go  simple_scorer.go  simple_scorer_test.go
pkg/conductor/service/: conductor_service.go
pkg/conductor/service/handler/: handler.go  handler_test.go  manager.go
pkg/musician/: server.go
pkg/musician/scorer/: scorer.go  simple_scorer.go
pkg/musician/service/: musician_service.go
pkg/musician/service/handler/: handler.go  handler_suite_test.go  handler_test.go  manager.go
pkg/musician/statuscollector/: BUILD.bazel  cache.go  collectorService.go  collector_service.go  collectorservice.go  fake_collector.go  metrics_api_collector.go  prometheus_collector.go  prometheus_http_collector.go  prometheuscollector.go  prometheushttpcollector.go  simple_cache.go  status_collector.go  statuscollector.go
pkg/provider/: key_value_provider.go
pkg/provider/kv/: local_storage_provider.go  local_storage_suite_test.go  local_storage_test.go
pkg/utils/: connections.go  network.go  test_utils.go  variables.go
resources/: api.raml
resources/api-design/: applicationInstance.raml  deployAppRequest.raml
scripts/: integration.py  replicated_wordpress  replicated_wordpress.json  replicated_wordpress_selectors.json  simple-testing.sh  simple_test.sh  single_wordpress.json  thingsboard.json
server/: BUILD.bazel  config.go  service.go
server/apps/: BUILD.bazel  handler.go  handler_test.go  manager.go  manager_mockup.go  manager_rest.go
tools/: grpc_map.go  grpc_server.go  grpc_utils.go
