load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "asm.go",
        "asm_mockup.go",
        "asm_rest.go",
        "entities.go",
    ],
    importpath = "github.com/daishogroup/conductor/asm",
    visibility = ["//visibility:public"],
    deps = [
        "//entities:go_default_library",
        "//vendor/github.com/daishogroup/derrors:go_default_library",
        "//vendor/github.com/daishogroup/dhttp:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
