load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "conductor.go",
        "conductor_mockup.go",
        "conductor_rest.go",
        "conductor_testsuite.go",
    ],
    importpath = "github.com/daishogroup/conductor/client",
    visibility = ["//visibility:public"],
    deps = [
        "//entities:go_default_library",
        "//vendor/github.com/daishogroup/derrors:go_default_library",
        "//vendor/github.com/daishogroup/dhttp:go_default_library",
        "//vendor/github.com/daishogroup/system-model/client:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/stretchr/testify/suite:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["conductor_rest_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/daishogroup/conductor/client",
    deps = [
        "//vendor/github.com/daishogroup/dhttp:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/stretchr/testify/suite:go_default_library",
    ],
)
