load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "integration.go",
        "integration_helper.go",
    ],
    importpath = "github.com/nalej/conductor/integration",
    visibility = ["//visibility:public"],
    deps = [
        "//client:go_default_library",
        "//entities:go_default_library",
        "//server:go_default_library",
        "//vendor/github.com/daishogroup/system-model/client:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/daishogroup/system-model/server:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)
