load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "parser.go",
    ],
    importpath = "github.com/daishogroup/conductor/logger",
    visibility = ["//visibility:public"],
    deps = [
        "//entities:go_default_library",
        "//errors:go_default_library",
        "//vendor/github.com/daishogroup/derrors:go_default_library",
        "//vendor/github.com/daishogroup/dhttp:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["parser_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/daishogroup/conductor/logger",
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
