load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "orchestrator.go",
        "orchestrator_basic.go",
    ],
    importpath = "github.com/daishogroup/conductor/orchestrator",
    visibility = ["//visibility:public"],
    deps = [
        "//asm:go_default_library",
        "//entities:go_default_library",
        "//errors:go_default_library",
        "//vendor/github.com/daishogroup/derrors:go_default_library",
        "//vendor/github.com/daishogroup/system-model/client:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["orchestrator_basic_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/daishogroup/conductor/orchestrator",
    deps = [
        "//asm:go_default_library",
        "//entities:go_default_library",
        "//vendor/github.com/daishogroup/system-model/client:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/stretchr/testify/suite:go_default_library",
    ],
)
