load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "app.go",
        "command.go",
        "main.go",
    ],
    importpath = "github.com/daishogroup/conductor/cmd/conductor-cli",
    visibility = ["//visibility:public"],
    deps = [
        "//client:go_default_library",
        "//entities:go_default_library",
        "//errors:go_default_library",
        "//vendor/github.com/daishogroup/derrors:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/gopkg.in/alecthomas/kingpin.v2:go_default_library",
    ],
)

go_binary(
    name = "conductor-cli",
    embed = [":go_default_library"],
    importpath = "github.com/daishogroup/conductor/cmd/conductor-cli",
    visibility = ["//visibility:public"],
)
