load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/nalej/conductor/cmd/conductor",
    visibility = ["//visibility:private"],
    deps = ["//vendor/github.com/spf13/cobra:go_default_library"],
)

go_binary(
    name = "conductor",
    embed = [":go_default_library"],
    importpath = "github.com/nalej/conductor/cmd/conductor",
    visibility = ["//visibility:public"],
)
