load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "handler.go",
        "manager.go",
        "manager_mockup.go",
        "manager_rest.go",
    ],
    importpath = "github.com/daishogroup/conductor/server/apps",
    visibility = ["//visibility:public"],
    deps = [
        "//asm:go_default_library",
        "//entities:go_default_library",
        "//errors:go_default_library",
        "//logger:go_default_library",
        "//orchestrator:go_default_library",
        "//vendor/github.com/daishogroup/derrors:go_default_library",
        "//vendor/github.com/daishogroup/dhttp:go_default_library",
        "//vendor/github.com/daishogroup/system-model/client:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "handler_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/daishogroup/conductor/server/apps",
    deps = [
        "//asm:go_default_library",
        "//entities:go_default_library",
        "//logger:go_default_library",
        "//vendor/github.com/bitly/go-simplejson:go_default_library",
        "//vendor/github.com/daishogroup/dhttp:go_default_library",
        "//vendor/github.com/daishogroup/system-model/client:go_default_library",
        "//vendor/github.com/daishogroup/system-model/entities:go_default_library",
        "//vendor/github.com/daishogroup/system-model/server:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/stretchr/testify/suite:go_default_library",
        "//vendor/github.com/verdverm/frisby:go_default_library",
    ],
)
