load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "prometheuscollector.go",
        "statuscollector.go",
    ],
    importpath = "github.com/nalej/conductor/pkg/musician/statuscollector",
    visibility = ["//visibility:public"],
    deps = ["//vendor/github.com/daishogroup/dhttp:go_default_library"],
)
